--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
 	%sveltekit.head%
 </head>
 
-<body data-sveltekit-preload-data="hover">
+<body data-sveltekit-preload-data="hover" class="bg-canvas text-ink">
 	<div style="display: contents">%sveltekit.body%</div>
 </body>
 
